--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,13 @@
     <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
+    <script>
+        // Disable window.onload = function() { ... env.execute(); ... } in jasmine-core/boot.js,
+        // because it calls .execute(). Save the onload handler in a variable. This
+        // variable will be called in our custom boot.js to start the tests after loading all specs.
+        var cy_jasmineCoreOnload = window.onload;
+        window.onload = null;
+    </script>
     <script src="../node_modules/jasmine-core/lib/console/console.js"></script>
     <script src="../node_modules/requirejs/require.js" data-main="boot"></script>
     <script type="text/javascript">
